--- a/KYC/QA/PrimeBankKYC/test-output/old/Default suite/classes.html
+++ b/KYC/QA/PrimeBankKYC/test-output/old/Default suite/classes.html
@@ -11,27 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Update_EmptyPanNumber</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Update_EmptyGender</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Update_EmptyAadharNumber</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Update_EmptyApplicantID</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>Update_FileUpload</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Update_EmptyFirstName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -57,6 +37,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>closingAllConnections</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>closeBrowser</td>
