--- a/KYC/QA/PrimeBankKYC/test-output/old/Default suite/methods.html
+++ b/KYC/QA/PrimeBankKYC/test-output/old/Default suite/methods.html
@@ -1,48 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 16:52:05</td>   <td>0</td> <td title="&gt;&gt;DriverBase.init()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:05</td>   <td>223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.intializingConnections()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;intializingConnections</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:07</td>   <td>1576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:32</td>   <td>26817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_EmptyAadharNumber()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_EmptyAadharNumber</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:36</td>   <td>31174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:37</td>   <td>32258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:52</td>   <td>47424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_EmptyApplicantID()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_EmptyApplicantID</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:54</td>   <td>48687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:52:55</td>   <td>49784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:09</td>   <td>64053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_EmptyFirstName()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_EmptyFirstName</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:10</td>   <td>65159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:11</td>   <td>66204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:24</td>   <td>78955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_EmptyGender()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_EmptyGender</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:25</td>   <td>79930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:26</td>   <td>81001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:39</td>   <td>94321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_EmptyPanNumber()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_EmptyPanNumber</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:40</td>   <td>95266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:41</td>   <td>96317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:54</td>   <td>109000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_FileUpload()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_FileUpload</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/18 16:53:57</td>   <td>111602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 16:53:58</td>   <td>113131</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverBase.closeBrowser()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 16:53:58</td>   <td>113132</td> <td>&nbsp;</td><td title="&lt;&lt;DriverBase.endreport()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;endreport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/02/20 17:17:55</td>   <td>0</td> <td title="&gt;&gt;DriverBase.init()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 17:17:56</td>   <td>157</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.intializingConnections()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;intializingConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 17:17:56</td>   <td>1038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 17:18:04</td>   <td>8645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_FileUpload()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_FileUpload</td> 
+  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 17:18:05</td>   <td>9834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 17:18:06</td>   <td>10829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.closingAllConnections()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;closingAllConnections</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/02/20 17:18:06</td>   <td>10829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverBase.closeBrowser()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/02/20 17:18:06</td>   <td>10830</td> <td>&nbsp;</td><td title="&lt;&lt;DriverBase.endreport()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;endreport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
 </table>
