--- a/KYC/QA/PrimeBankKYC/test-output/old/Default suite/classes.html
+++ b/KYC/QA/PrimeBankKYC/test-output/old/Default suite/classes.html
@@ -4,21 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Scripts.UpdateTestScript</td>
+<td>Scripts.NSDLVerificationTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Update_FileUpload</td>
+<td>valid_pan_id</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>blank_pan_id</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>invalid_pan_id</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>intializingConnections</td>
+<td>initializingConnections</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
