--- a/KYC/QA/PrimeBankKYC/test-output/old/Default suite/methods.html
+++ b/KYC/QA/PrimeBankKYC/test-output/old/Default suite/methods.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9ab6">  <td>19/02/20 17:17:55</td>   <td>0</td> <td title="&gt;&gt;DriverBase.init()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;init</td> 
+<tr bgcolor="fb9ab6">  <td>19/02/20 18:42:37</td>   <td>0</td> <td title="&gt;&gt;DriverBase.init()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&gt;&gt;init</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/20 17:17:56</td>   <td>157</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.intializingConnections()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;intializingConnections</td> 
+<tr bgcolor="f6e879">  <td>19/02/20 18:42:37</td>   <td>156</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NSDLVerificationTestScript.initializingConnections()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&gt;&gt;initializingConnections</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/20 17:17:56</td>   <td>1038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UpdateTestScript.setUp()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&gt;&gt;setUp</td> 
+<tr bgcolor="f6e879">  <td>19/02/20 18:42:38</td>   <td>1017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NSDLVerificationTestScript.setUp()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/20 17:18:04</td>   <td>8645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateTestScript.Update_FileUpload()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">Update_FileUpload</td> 
+<tr bgcolor="f6e879">  <td>19/02/20 18:42:54</td>   <td>17276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NSDLVerificationTestScript.blank_pan_id()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">blank_pan_id</td> 
   <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/20 17:18:05</td>   <td>9834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.tearDown()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;tearDown</td> 
+<tr bgcolor="f6e879">  <td>19/02/20 18:42:56</td>   <td>19620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NSDLVerificationTestScript.tearDown()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="f6e879">  <td>19/02/20 17:18:06</td>   <td>10829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UpdateTestScript.closingAllConnections()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;closingAllConnections</td> 
+<tr bgcolor="f6e879">  <td>19/02/20 18:42:57</td>   <td>20450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NSDLVerificationTestScript.setUp()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:08</td>   <td>31539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NSDLVerificationTestScript.invalid_pan_id()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">invalid_pan_id</td> 
+  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:11</td>   <td>34125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NSDLVerificationTestScript.tearDown()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:12</td>   <td>34972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NSDLVerificationTestScript.setUp()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:23</td>   <td>46489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NSDLVerificationTestScript.valid_pan_id()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">valid_pan_id</td> 
+  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:26</td>   <td>49142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NSDLVerificationTestScript.tearDown()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/02/20 18:43:27</td>   <td>49992</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NSDLVerificationTestScript.closingAllConnections()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;closingAllConnections</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/20 17:18:06</td>   <td>10829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverBase.closeBrowser()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="fb9ab6">  <td>19/02/20 18:43:27</td>   <td>49992</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverBase.closeBrowser()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/20 17:18:06</td>   <td>10830</td> <td>&nbsp;</td><td title="&lt;&lt;DriverBase.endreport()[pri:0, instance:Scripts.UpdateTestScript@28d25987]">&lt;&lt;endreport</td> 
+<tr bgcolor="fb9ab6">  <td>19/02/20 18:43:27</td>   <td>49994</td> <td>&nbsp;</td><td title="&lt;&lt;DriverBase.endreport()[pri:0, instance:Scripts.NSDLVerificationTestScript@28d25987]">&lt;&lt;endreport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076496284</td>   <td></td> </tr>
 </table>
